--- a/page5.html
+++ b/page5.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="header3 cid-r9dmXavp6g" id="header3-5">
+<section class="engine"><a href="https://mobirise.info/d">free site maker</a></section><section class="header3 cid-r9dmXavp6g" id="header3-5">
 
     
 
@@ -72,8 +72,8 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-figure" style="width: 25%;">
-                <img src="assets/images/img-9403.jpg" alt="Mobirise" title="">
+            <div class="mbr-figure" style="width: 35%;">
+                <img src="assets/images/foto-26-12-18-16-28.jpg" alt="Mobirise" title="">
             </div>
 
             <div class="media-content">
