--- a/page7.html
+++ b/page7.html
@@ -59,13 +59,13 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown nav-right navbar-nav-top-padding" data-app-modern-menu="true"><li class="nav-item dropdown"><a class="nav-link link text-black display-4" href="page3.html" aria-expanded="false">GRAFISCH ONTWERP</a></li><li class="nav-item dropdown"><a class="nav-link link text-black dropdown-toggle display-4" href="page4.html" aria-expanded="false" data-toggle="dropdown-submenu">GRAFIEK<br></a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="page9.html" aria-expanded="false">Illustraties<br></a><a class="text-black dropdown-item display-4" href="page8.html" aria-expanded="true">Tekeningen<br></a></div></li><li class="nav-item"><a class="nav-link link text-black display-4" href="keramiek.html">KERAMIEK</a></li><li class="nav-item dropdown"><a class="nav-link link text-black dropdown-toggle display-4" href="page5.html" data-toggle="dropdown-submenu" aria-expanded="false">OVER MIJ</a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="page5.html">Biografie<br></a><a class="text-black dropdown-item display-4" href="page2.html" aria-expanded="false">Contact<br></a></div></li></ul>
+            <ul class="navbar-nav nav-dropdown nav-right navbar-nav-top-padding" data-app-modern-menu="true"><li class="nav-item dropdown"><a class="nav-link link text-black display-4" href="index.html" aria-expanded="false">HOME</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page3.html" aria-expanded="false">GRAFISCH ONTWERP</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black display-4" href="page4.html" aria-expanded="false" data-toggle="dropdown-submenu">GRAFIEK<br></a><div class="dropdown-menu"><a class="dropdown-item text-black display-4" href="page9.html" aria-expanded="false">Illustraties<br></a><a class="dropdown-item text-black display-4" href="page8.html" aria-expanded="true">Tekeningen<br></a></div></li><li class="nav-item"><a class="nav-link link text-black display-4" href="keramiek.html">KERAMIEK</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black display-4" href="page5.html" data-toggle="dropdown-submenu" aria-expanded="false">OVER MIJ</a><div class="dropdown-menu"><a class="dropdown-item text-black display-4" href="page5.html">Biografie<br></a><a class="dropdown-item text-black display-4" href="page2.html" aria-expanded="false">Contact<br></a></div></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">create a site for free</a></section><section class="mbr-gallery mbr-slider-carousel cid-r9be63Hxfg" id="gallery3-7">
+<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="mbr-gallery mbr-slider-carousel cid-r9be63Hxfg" id="gallery3-7">
 
     
 
