create github pages

--- a/page6.html
+++ b/page6.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free site creation software</a></section><section class="mbr-gallery mbr-slider-carousel cid-r8rlK9670h" id="gallery1-6">
+<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="mbr-gallery mbr-slider-carousel cid-r8rlK9670h" id="gallery1-6">
 
     
 
