--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html website templates</a></section><section class="mbr-section content4 cid-rrtjJbpj6s" id="content4-9">
+<section class="engine"><a href="https://mobirise.info/y">html site templates</a></section><section class="mbr-section content4 cid-rrtjJbpj6s" id="content4-9">
 
     
 
