--- a/page2.html
+++ b/page2.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="mbr-section form1 cid-r5SCUxAPJk" id="form1-5">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="mbr-section form1 cid-r5SCUxAPJk" id="form1-5">
 
     
 
@@ -85,7 +85,7 @@
                         Bedankt om het formulier in te vullen!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="MgHTlI3pX/7ypePRyRsF3t19d5V+6SnuMzrwBBJ29jcVKal47IAl7Lh8qyAaQXvHdYySVbt0bATQMUWYU+VuId8H4XVbt1QTN8V0sLXz61sNmC+JUOlswXwOiZ4sh7/A">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="RNlQ52u7nkgtHJLj0sz0P8gPoczZhfH3hYYfWlVqtGkGChAtJRdV3OH7k+0DAsqn8ESMH/B6ksZIlO2QmwJUf/MbRsK/mJpmlgMKI/uLvz72Yd4xjRvXUmgkQH6sg+eS">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
